<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="ContentDescription,HardcodedText">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BACK"/>

    <ScrollView
        android:id="@+id/report_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="2dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:paddingTop="12dp"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/issue_title"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/title_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/issue_title_hint"
                    android:inputType="text"
                    android:maxLength="255"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/describe_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/issue_describe"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/describe_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/issue_describe_hint"
                    android:inputType="textMultiLine"
                    android:maxLength="5000"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="20dp"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <!--            2.4 Attach Photos-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/attach_photos"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_photos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:minHeight="10dp"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp" />
            </FrameLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_compress"
                android:text="Is it necessary to compress the image?  "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/contact_information"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/your_name_hint"
                    android:inputType="text"
                    android:maxLength="255"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/email_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/e_mail_address__hint"
                    android:inputType="textEmailAddress"
                    android:maxLength="255"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/phone_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:digits="0123456789 -()+"
                    android:hint="@string/phone_number_hint"
                    android:inputType="text"
                    android:maxLength="32"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textSize="14sp"
                    tools:ignore="TextFields" />
            </androidx.cardview.widget.CardView>

            <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="@dimen/dp_18"-->
            <!--                android:paddingStart="0dp"-->
            <!--                android:paddingEnd="2dp">-->

            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    app:layout_constraintTop_toTopOf="parent"-->
            <!--                    app:layout_constraintStart_toStartOf="parent" />-->

            <!--                <TextView-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/checkbox_tips"-->
            <!--                    android:textColor="@color/black"-->
            <!--                    android:layout_marginTop="4dp"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                    app:layout_constraintEnd_toEndOf="parent"-->
            <!--                    app:layout_constraintStart_toEndOf="@id/checkBox"-->
            <!--                    app:layout_constraintTop_toTopOf="@+id/checkBox" />-->
            <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

            <Button
                android:id="@+id/report_button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/blue_btn_background"
                android:gravity="center"
                android:text="REPORT"
                android:textColor="#FFFFFFFF" />

            <ScrollView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="250dp">
                <!-- 结果显示区域 -->
                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F5F5F5"
                    android:focusable="true"
                    android:gravity="top"
                    android:minHeight="250dp"
                    android:overScrollMode="always"
                    android:focusableInTouchMode="true"
                    android:textIsSelectable="true"
                    android:padding="12dp"
                    android:scrollbars="vertical"
                    android:text="Waiting for API call ..."
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </ScrollView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>